# cloudgpu-automation-lib

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  ruff.toml  vast_gpu_manager.py  vast_service.py  vast_smoke.py
examples/: cuda_test.py  pytorch_test.py
scripts/: setup_ssh.sh  workflow.sh
services/vast/gpu_manager/: __init__.py  constants.py  env.py  errors.py  manager.py  utils.py
services/vast/service/: __init__.py  dataset.py  env.py  offers.py  ssh.py  types.py  workflow.py
vast_gpu_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
